refactor: feature sliced desidn

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,10 @@
 	"compilerOptions": {
 		"esModuleInterop": true,
 		"jsx": "react-jsx",
-		"baseUrl": ".",
+		"baseUrl": "src",
 		"paths": {
-			"~/*": ["./*"],
-			"@/*": ["./*"]
+			"@/*": ["./*"],
+			"~/*": ["./*"]
 		}
 	}
 }
