--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
 	"vetur.format.options.useTabs": true,
 	"vetur.format.options.tabSize": 4,
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
-	"typescript.tsdk": "node_modules/typescript/lib"
+	"typescript.tsdk": "node_modules/typescript/lib",
+	"editor.formatOnPaste": true,
+	"editor.formatOnSave": true
 }
