--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"react-dom": "^18.2.0",
 		"react-refresh": "^0.11.0",
 		"react-router-dom": "^6.8.1",
+		"react-transition-group": "^4.4.5",
 		"resolve": "^1.20.0",
 		"resolve-url-loader": "^4.0.0",
 		"sass-loader": "^12.3.0",
@@ -67,7 +68,8 @@
 		"webpack": "^5.64.4",
 		"webpack-dev-server": "^4.6.0",
 		"webpack-manifest-plugin": "^4.0.2",
-		"workbox-webpack-plugin": "^6.4.1"
+		"workbox-webpack-plugin": "^6.4.1",
+		"yup": "^1.2.0"
 	},
 	"eslintConfig": {
 		"extends": [
