--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"react-app-polyfill": "^3.0.0",
 		"react-dev-utils": "^12.0.1",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.46.1",
 		"react-refresh": "^0.11.0",
 		"react-router-dom": "^6.8.1",
 		"react-transition-group": "^4.4.5",
