--- a/package.json
+++ b/package.json
@@ -54,9 +54,11 @@
 		"react-dev-utils": "^12.0.1",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.46.1",
+		"react-redux": "^8.1.2",
 		"react-refresh": "^0.11.0",
 		"react-router-dom": "^6.8.1",
 		"react-transition-group": "^4.4.5",
+		"redux": "^4.2.1",
 		"resolve": "^1.20.0",
 		"resolve-url-loader": "^4.0.0",
 		"sass-loader": "^12.3.0",
