--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"clsx": "^2.0.0",
 		"css-loader": "^6.5.1",
 		"css-minimizer-webpack-plugin": "^3.2.0",
+		"date-fns": "^2.30.0",
 		"dotenv": "^10.0.0",
 		"dotenv-expand": "^5.1.0",
 		"editorconfig": "^1.0.2",
